# hwpx-rust

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build-wheels.yml  ci.yml
crates/hwp-core/: Cargo.toml  README.md
crates/hwp-core/src/: cfb.rs  error.rs  lib.rs  types.rs
crates/hwp-core/src/document/: constants.rs  preview_image.rs  preview_text.rs  summary_information.rs  xml_template.rs
crates/hwp-core/src/document/bindata/: mod.rs
crates/hwp-core/src/document/bodytext/: chart_data.rs  control_char.rs  eqedit.rs  footnote_shape.rs  line_seg.rs  mod.rs  page_border_fill.rs  record_tree.rs  table.rs  video_data.rs
crates/hwp-core/src/document/docinfo/: bin_data.rs  border_fill.rs  doc_data.rs  face_name.rs  mod.rs  numbering.rs  para_shape.rs  style.rs  tab_def.rs
crates/hwp-core/src/document/fileheader/: mod.rs  serialize.rs
crates/hwp-core/src/parser/: detect.rs  mod.rs
crates/hwp-core/tests/: common.rs  fileheader_tests.rs  parser_tests.rs  snapshot_tests.rs  test_new_file.rs
crates/hwp-core/tests/snapshots/: borderfill.md  multicolumns-in-common-controls.md  multicolumns-layout.md  noori.md  snapshot_tests__borderfill_markdown.snap  snapshot_tests__multicolumns_in_common_controls_markdown.snap  snapshot_tests__multicolumns_layout_markdown.snap  snapshot_tests__noori_markdown.snap  snapshot_tests__table2_markdown.snap  snapshot_tests__table_caption_markdown.snap  snapshot_tests__table_markdown.snap  snapshot_tests__table_position_markdown.snap  table-caption.md  table-position.md  table.md  table2.md
(+36 files in other folders)
